...
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toTopOf="@id/addBtn"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHeight_percent="0.65">

        <LinearLayout
            android:id="@+id/formLinearLayout"
            android:layout_width="match_parent"
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Title"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Company"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/companyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="City"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/cityText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="State"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/stateText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Cost of Living"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/costText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number"
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Yearly Salary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/salaryText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Yearly Bonus"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/bonusText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Number of Stock Option"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/optionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
...
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="Home Buying Program Fund"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/hbpText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Personal Choice Holiday"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/holidayText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number"
...
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Monthly Internet Stipend"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/stipendText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
...
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
...
