...
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toTopOf="@id/saveBtn"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHeight_percent="0.65">

        <LinearLayout
            android:id="@+id/formLinearLayout"
            android:layout_width="match_parent"
...
